Edit Article Impelemented

--- a/MB.Presentation/Areas/Administrator/Pages/ArticleCategoryManagement/Create.cshtml
+++ b/MB.Presentation/Areas/Administrator/Pages/ArticleCategoryManagement/Create.cshtml
@@ -1,6 +1,7 @@
 ﻿@page
 @model MB.Presentation.Areas.Administrator.Pages.ArticleCategoryManagement.CreateModel
 @{
+    ViewData["Title"] = "Create New Article Category";
 }
 <div class="card">
     <div class="card-header">
