--- a/MB.Presentation/Areas/Administrator/Pages/ArticleCategoryManagement/Edit.cshtml
+++ b/MB.Presentation/Areas/Administrator/Pages/ArticleCategoryManagement/Edit.cshtml
@@ -1,6 +1,7 @@
 ﻿@page "{id:long}"
 @model MB.Presentation.Areas.Administrator.Pages.ArticleCategoryManagement.EditModel
 @{
+    ViewData["Title"] ="Edit Article Category";
 }
 
 <div class="card">
