--- a/MB.Presentation/Areas/Administrator/Pages/ArticleCategoryManagement/List.cshtml
+++ b/MB.Presentation/Areas/Administrator/Pages/ArticleCategoryManagement/List.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
-
 @model MB.Presentation.Areas.Administrator.Pages.ArticleCategoryManagement.ListModel
 @{
+    ViewData["Title"] = "Article Categories List";
 }
 
 <div class="card">
