--- a/MB.Presentation/Areas/Administrator/Pages/ArticleManagement/Edit.cshtml
+++ b/MB.Presentation/Areas/Administrator/Pages/ArticleManagement/Edit.cshtml
@@ -1,51 +1,52 @@
-﻿@page
-@model MB.Presentation.Areas.Administrator.Pages.ArticleManagement.CreateModel
+﻿@page "{id:long}"
+@model MB.Presentation.Areas.Administrator.Pages.ArticleManagement.EditModel
 @{
-    ViewData["Title"] = "Create New Article";
+    ViewData["Title"] = "Edit Article";
 }
 <div class="card">
     <div class="card-header">
-        <h2>Create New Article</h2>
+        <h2>Edit Article</h2>
     </div>
     <div class="card-body">
         <div class="row">
             <div class="col-md-12">
                 <form method="post">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <input type="hidden" asp-for="Article.Id" />
                     <div class="col-md-6 col-sm-12">
                         <div class="form-group">
-                            <label for="Title" class="control-label">Title:</label>
-                            <input name="Title" id="Title" class="form-control" />
+                            <label asp-for="Article.Title" class="control-label">Title:</label>
+                            <input asp-for="Article.Title"class="form-control" />
                         </div>
                     </div>
                     <div class="col-md-6 col-sm-12">
                         <div class="form-group">
-                            <label for="ShortDescription" class="control-label">ShortDescription:</label>
-                            <textarea name="ShortDescription" id="ShortDescription" class="form-control" rows="3"></textarea>
+                            <label asp-for="Article.ShortDescription" class="control-label">ShortDescription:</label>
+                            <textarea asp-for="Article.ShortDescription" class="form-control" rows="3"></textarea>
                         </div>
                     </div>
                     <div class="col-md-6 col-sm-12">
                         <div class="form-group">
-                            <label for="Image" class="control-label">Image path:</label>
-                            <input name="Image" id="Image" class="form-control" />
+                            <label asp-for="Article.Image" class="control-label">Image path:</label>
+                            <input asp-for="Article.Image" class="form-control" />
                         </div>
                     </div>
                     <div class="col-md-6 col-sm-12">
                         <div class="form-group">
-                            <label for="Content" class="control-label">Content:</label>
-                            <textarea name="Content" id="Content" class="form-control" rows="5"></textarea>
+                            <label asp-for="Article.Content" class="control-label">Content:</label>
+                            <textarea asp-for="Article.Content" class="form-control" rows="5"></textarea>
                         </div>
                     </div>
                     <div class="col-md-6 col-sm-12">
                         <div class="form-group">
-                            <label for="ArticleCategoryId" class="control-label">Category:</label>
-                            <select asp-items="Model.ArticleCategories" name="ArticleCategoryId" id="ArticleCategoryId" class="form-control">
+                            <label asp-for="Article.ArticleCategoryId" class="control-label">Category:</label>
+                            <select asp-for="Article.ArticleCategoryId" asp-items="Model.ArticleCategories"  class="form-control">
                                 <option value="0">Please Enter Your Articles Category</option>
                             </select>
                         </div>
                     </div>
                     <div class="form-group">
-                        <input type="submit" value="Create" class="btn btn-success" />
+                        <input type="submit" value="Edit" class="btn btn-success" />
                         <a class="btn btn-dark" asp-page="./List" asp-area="Administrator">Back to list</a>
                     </div>
                 </form>
