--- a/MB.Presentation/Areas/Administrator/Pages/ArticleManagement/List.cshtml
+++ b/MB.Presentation/Areas/Administrator/Pages/ArticleManagement/List.cshtml
@@ -1,6 +1,7 @@
 ﻿@page
 @model MB.Presentation.Areas.Administrator.Pages.ArticleManagement.ListModel
 @{
+    ViewData["Title"] = "Articles List";
 }
 <div class="card">
     <div class="card-header">
