Article Detail Page Implemented

--- a/MB.Presentation/Pages/Index.cshtml
+++ b/MB.Presentation/Pages/Index.cshtml
@@ -11,13 +11,13 @@
             @foreach (var article in Model.Article)
             {
                 <div class="post col-xl-6">
-                    <div class="post-thumbnail"><a href="#"><img src="@article.Image" alt="@article.Title" title="@article.Title" class="img-fluid"></a></div>
+                    <div class="post-thumbnail"><a asp-page="./ArticleDetails" asp-route-id="@article.Id"><img src="@article.Image" alt="@article.Title" title="@article.Title" class="img-fluid"></a></div>
                     <div class="post-details">
                         <div class="post-meta d-flex justify-content-between">
                             <div class="date meta-last">.@article.CreationDate</div>
                             <div class="category"><a href="#">@article.ArticleCategory</a></div>
                         </div>
-                        <a href="#">
+                        <a asp-page="./ArticleDetails" asp-route-id="@article.Id">
                             <h3 class="h4">@article.Title</h3>
                         </a>
                         <p class="text-muted">@article.ShortDescription</p>
