Comment Domain & Application Structure Implemented

--- a/MB.Presentation/Pages/ArticleDetails.cshtml
+++ b/MB.Presentation/Pages/ArticleDetails.cshtml
@@ -10,7 +10,7 @@
             <div class="post-thumbnail"><img src="@Model.Article.Image" alt="@Model.Article.Title" title="@Model.Article.Title" class="img-fluid"></div>
             <div class="post-details">
                 <div class="post-meta d-flex justify-content-between">
-                    <div class="category"><a href="#">@Model.Article.ArticleCategory</a><a href="#">Financial</a></div>
+                    <div class="category"><a href="#">@Model.Article.ArticleCategory</a></div>
                 </div>
                 <h1>@Model.Article.Title<a href="#"><i class="fa fa-bookmark-o"></i></a></h1>
                 <div class="post-footer d-flex align-items-center flex-column flex-sm-row">
@@ -65,7 +65,7 @@
                 <div class="comment">
                     <div class="comment-header d-flex justify-content-between">
                         <div class="user d-flex align-items-center">
-                            <div class="image"><img src="img/user.svg" alt="..." class="img-fluid rounded-circle"></div>
+                            <div class="image"><img src="~/img/user.svg" alt="..." class="img-fluid rounded-circle"></div>
                             <div class="title"><strong>Nikolas</strong><span class="date">May 2016</span></div>
                         </div>
                     </div>
@@ -76,7 +76,7 @@
                 <div class="comment">
                     <div class="comment-header d-flex justify-content-between">
                         <div class="user d-flex align-items-center">
-                            <div class="image"><img src="img/user.svg" alt="..." class="img-fluid rounded-circle"></div>
+                            <div class="image"><img src="~/img/user.svg" alt="..." class="img-fluid rounded-circle"></div>
                             <div class="title"><strong>John Doe</strong><span class="date">May 2016</span></div>
                         </div>
                     </div>
