--- a/MB.Presentation/Pages/ArticleDetails.cshtml
+++ b/MB.Presentation/Pages/ArticleDetails.cshtml
@@ -89,17 +89,18 @@
                 <header>
                     <h3 class="h6">Leave a reply</h3>
                 </header>
-                <form action="#" class="commenting-form">
+                <form  class="commenting-form" method="post">
                     <div class="row">
                         <div class="form-group col-md-6">
-                            <input type="text" name="username" id="username" placeholder="Name" class="form-control">
+                            <input type="text" name="Name" id="Name" placeholder="Name" class="form-control">
                         </div>
                         <div class="form-group col-md-6">
-                            <input type="email" name="username" id="useremail" placeholder="Email Address (will not be published)" class="form-control">
+                            <input type="email" name="Email" id="Email" placeholder="Email Address (will not be published)" class="form-control">
                         </div>
                         <div class="form-group col-md-12">
-                            <textarea name="usercomment" id="usercomment" placeholder="Type your comment" class="form-control"></textarea>
+                            <textarea name="Message" id="Message" placeholder="Type your comment" class="form-control"></textarea>
                         </div>
+                        <input type="hidden" name="ArticleId" value="@Model.Article.Id"/>
                         <div class="form-group col-md-12">
                             <button type="submit" class="btn btn-secondary">Submit Comment</button>
                         </div>
