Comment List In User Interface Implemented

--- a/MB.Presentation/Pages/ArticleDetails.cshtml
+++ b/MB.Presentation/Pages/ArticleDetails.cshtml
@@ -17,7 +17,7 @@
                     <div class="d-flex align-items-center flex-wrap">
                         <div class="date"><i class="icon-clock"></i> @Model.Article.LasTimeSinceCreation</div>
                         <div class="views"><i class="icon-eye"></i> 500</div>
-                        <div class="comments meta-last"><i class="icon-comment"></i>12</div>
+                        <div class="comments meta-last"><i class="icon-comment"></i></div>
                     </div>
                 </div>
                 <div class="post-body">
@@ -49,41 +49,22 @@
             </div>
             <div class="post-comments">
                 <header>
-                    <h3 class="h6">Post Comments<span class="no-of-comments">(3)</span></h3>
+                    <h3 class="h6">Post Comments<span class="no-of-comments">(@Model.Article.CommentCount)</span></h3>
                 </header>
-                <div class="comment">
-                    <div class="comment-header d-flex justify-content-between">
-                        <div class="user d-flex align-items-center">
-                            <div class="image"><img src="~/img/user.svg" alt="..." class="img-fluid rounded-circle"></div>
-                            <div class="title"><strong>Jabi Hernandiz</strong><span class="date">May 2016</span></div>
+                @foreach (var comment in Model.Article.Comments)
+                {
+                    <div class="comment">
+                        <div class="comment-header d-flex justify-content-between">
+                            <div class="user d-flex align-items-center">
+                                <div class="image"><img src="~/img/user.svg" alt="..." class="img-fluid rounded-circle"></div>
+                                <div class="title"><strong>@comment.Name</strong><span class="date">@comment.CreationDate</span></div>
+                            </div>
+                        </div>
+                        <div class="comment-body">
+                            <p>@comment.Message</p>
                         </div>
                     </div>
-                    <div class="comment-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-                    </div>
-                </div>
-                <div class="comment">
-                    <div class="comment-header d-flex justify-content-between">
-                        <div class="user d-flex align-items-center">
-                            <div class="image"><img src="~/img/user.svg" alt="..." class="img-fluid rounded-circle"></div>
-                            <div class="title"><strong>Nikolas</strong><span class="date">May 2016</span></div>
-                        </div>
-                    </div>
-                    <div class="comment-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-                    </div>
-                </div>
-                <div class="comment">
-                    <div class="comment-header d-flex justify-content-between">
-                        <div class="user d-flex align-items-center">
-                            <div class="image"><img src="~/img/user.svg" alt="..." class="img-fluid rounded-circle"></div>
-                            <div class="title"><strong>John Doe</strong><span class="date">May 2016</span></div>
-                        </div>
-                    </div>
-                    <div class="comment-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-                    </div>
-                </div>
+                }
             </div>
             <div class="add-comment">
                 <header>
