--- a/MB.Presentation/Pages/Index.cshtml
+++ b/MB.Presentation/Pages/Index.cshtml
@@ -23,7 +23,7 @@
                         <p class="text-muted">@article.ShortDescription</p>
                         <footer class="post-footer d-flex align-items-center">
                             <div class="date"><i class="icon-clock"></i>@article.LasTimeSinceCreation</div>
-                            <div class="comments meta-last"><i class="icon-comment"></i>12</div>
+                            <div class="comments meta-last"><i class="icon-comment"></i>@article.CommentCount</div>
                         </footer>
                     </div>
                 </div>
